--- a/evk_m101_driver/evk_m101_driver.ioc
+++ b/evk_m101_driver/evk_m101_driver.ioc
@@ -13,8 +13,9 @@ Mcu.IP0=I2C1
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP4=TIM14
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32G0B1R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -22,6 +23,7 @@ Mcu.Pin1=PC14-OSC32_IN (PC14)
 Mcu.Pin10=PA14-BOOT0
 Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin12=VP_SYS_VS_DBSignals
+Mcu.Pin13=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PF0-OSC_IN (PF0)
 Mcu.Pin4=PA2
@@ -30,7 +32,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA9
 Mcu.Pin8=PA10
 Mcu.Pin9=PA13
-Mcu.PinsNb=13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G0B1RETx
@@ -38,11 +40,12 @@ MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.I2C1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.I2C1_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM14_IRQn=true\:3\:0\:true\:false\:true\:true\:true\:true
 PA10.Mode=I2C
 PA10.Signal=I2C1_SDA
 PA13.GPIOParameters=GPIO_Label
@@ -100,7 +103,7 @@ ProjectManager.DeviceId=STM32G0B1RETx
 ProjectManager.FirmwarePackage=STM32Cube FW_G0 V1.6.2
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x010
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -112,13 +115,13 @@ ProjectManager.ProjectFileName=evk_m101_driver.ioc
 ProjectManager.ProjectName=evk_m101_driver
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x10000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM14_Init-TIM14-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.AHBFreq_Value=16000000
 RCC.APBFreq_Value=16000000
@@ -161,12 +164,16 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+TIM14.IPParameters=Prescaler
+TIM14.Prescaler=230
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 board=NUCLEO-G0B1RE
 boardIOC=true
 isbadioc=false
